sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:15: error: value i is not a member of Unit
possible cause: maybe a semicolon is missing before `value i'?
      }i=i+1
       ^